# mcvs

./: Cargo.toml
mcsrs/: Cargo.toml
mcsrs/src/: main.rs  net_client.rs
mcsrs/src/sm/: encryption.rs  mod.rs
protocol/: Cargo.toml
protocol/src/: codec.rs  iob.rs  lib.rs
protocol/src/packets/: login.rs  mod.rs  status.rs
protocol/src/packets/play/: dim.rs  mod.rs
protocol/src/types/: chat.rs  int.rs  json.rs  mod.rs  nbt.rs  pos.rs  string.rs  uuid.rs  vec.rs
protocol_derive/: Cargo.toml
protocol_derive/src/: lib.rs
