[package]
name = "mcsrs"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1.0.1"
tokio = { version = "1.18.5", features = ["net", "io-util", "rt", "rt-multi-thread", "bytes", "macros", "time", "sync"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
tracing-futures = "0.2.5"
protocol = { path = "../protocol" }
uuid = "0.8.2"
simd-json = "0.4.7"
serde = "1.0.127"
